--- a/web_dynamic/static/styles/6-filters.css
+++ b/web_dynamic/static/styles/6-filters.css
@@ -1,103 +1,111 @@
-.container .filters {
-    position: relative;
-    background: white;
+.filters {
+    background-color: white;
     height: 70px;
     width: 100%;
     border: 1px solid #DDDDDD;
     border-radius: 4px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
 }
-button {
-    position: absolute;
+
+section.filters button {
     font-size: 18px;
-    background: #FF5A5F;
-    color: #FFFFFF;
+    color: white;
+    background-color: #FF5A5F;
     height: 48px;
     width: 20%;
-    border-style: none;
+    border: 0px;
     border-radius: 4px;
-    top: 15%;
-    right: 30px;
+    margin-left: auto;
+    margin-right: 30px;
+    opacity: 1;
 }
-button:hover {
+
+section.filters button:hover {
     opacity: 0.9;
 }
-.filters div {
-    display: inline-grid;
+
+.locations, .filters .amenities {
+    height: 100%;
+    width: 25%;
+    padding-left: 60px;
 }
-.filters h2 {
-    margin-left: 15%;
-    margin-top: 0;
-    margin-bottom: 0;
+
+.locations {
+    border: 1px solid #DDDDDD;
+}
+
+.locations h3, .amenities h3 {
     font-weight: 600;
+    margin: 12px 0 5px 0;
 }
-.filters h3 {
-    margin-left: 15%;
-    margin-bottom: 0;
-    font-weight: 600;
-}
-.filters h4 {
-    margin-left: 15%;
-    margin-top: 0;
+
+.locations h4, .amenities h4 {
     font-weight: 400;
     font-size: 14px;
-}
-.locations {
-    height: 100%;
-    width: 25%;
-    border-right: 1px solid #DDDDDD;
-}
-.amenities {
-    height: 100%;
-    width: 25%;
+    margin: 0em;
 }
 
 .popover {
-    visibility: hidden;
-    width: 100%;
+
+    background-color: #FAFAFA;
     border: 1px solid #DDDDDD;
     border-radius: 4px;
-    background: #FAFAFA;
-    padding-bottom: 15px;
-    height: 300px;
-    overflow-y: scroll;
-    scrollbar-width: none;
+    display: none;
+    position: relative;
+    left: -61px;
+    width: 100%;
+    z-index: 1;
     max-height: 300px;
+    white-space: nowrap;
+    min-height: 200px;
+    margin-top: 17px;
+    padding: 30px 50px 30px 10px;
+    overflow: auto;
 }
 
-.popover::-webkit-scrollbar{
-    width: 0px;
-}
-
-.amenities .popover {
-    padding: 10px 0;
-    margin-left: -5px;
-    margin-top: 0%;
-}
-
-.amenities .popover ul{
-    margin: 0px;
-}
-
-.locations .popover {
-    margin-top: 0%;
-}
-.popover ul {
+.popover, .popover ul {
     list-style-type: none;
-    padding-bottom: 10px;
-    padding-left: 10px;
-}
-.popover ul li{
-    padding: 4px;
-    padding-left: 10px;
 }
 
-.popover ul h2{
-    margin-top: 1.5%;
-    margin-bottom: 5%;
-    margin-left: 0px;
+.locations:hover > .popover {
+    display: block;
 }
 
-.amenities:hover .popover,
-.locations:hover .popover {
-    visibility: visible;
+.amenities:hover > .popover {
+    display: block;
+}
+
+.popover h2 {
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+
+.locations > .popover > li {
+    margin-bottom: 30px;
+    margin-left: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+}
+
+.locations > .popover > li > ul {
+    padding-left: 20px;
+    flex: 0 1 100%;
+    margin-top: 5px;
+}
+
+.locations > .popover > li > ul > li {
+    margin-bottom: 5px;
+}
+
+.amenities > .popover > li {
+    margin-left: 50px;
+    margin-bottom: 10px;
+}
+
+li > input {
+    margin-right: 10px;
 }
